fix: Increase spacing between footer links
Little bit tight here. Difficult to use on touch devices.

--- a/components/Footer/components/SubFooter/SubFooter.module.css
+++ b/components/Footer/components/SubFooter/SubFooter.module.css
@@ -18,7 +18,7 @@
 }
 
 .link {
-  margin-bottom: var(--space-xs);
+  margin-bottom: var(--space-sm);
 }
 
 .link:last-child {
